--- a/stop.html
+++ b/stop.html
@@ -1,3 +1,6 @@
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width,user-scalable=0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 <style>
   img{
 
@@ -13,6 +16,9 @@ border-radius:50%;
     background:#000;
   }
 </style>
+    
+    </head>
 <body>
 <img src="stop.jpg" height="100%">
 </body>
+</html>
